--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -3,7 +3,7 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -335,6 +335,7 @@
                     <connections>
                         <outlet property="author" destination="tSw-Zy-e72" id="Snm-Y7-z15"/>
                         <outlet property="content" destination="eGi-cd-2kl" id="xIj-hP-faw"/>
+                        <outlet property="imageHeightConstraint" destination="kLl-Lf-4hh" id="K13-pX-Uuy"/>
                         <outlet property="imageView" destination="HDb-GX-SQ4" id="ho1-l5-vdV"/>
                         <outlet property="labelDescription" destination="gR3-xP-PjE" id="3pu-eH-KEc"/>
                         <outlet property="labelTitle" destination="T49-9W-h1i" id="c0H-Ix-80q"/>
@@ -355,33 +356,57 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <activityIndicatorView key="tableFooterView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" id="GSq-0c-lJn">
-                            <rect key="frame" x="0.0" y="132" width="375" height="44"/>
+                            <rect key="frame" x="0.0" y="151" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </activityIndicatorView>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="aBs-wd-CZh" detailTextLabel="5mF-oi-s4p" rowHeight="76" style="IBUITableViewCellStyleSubtitle" id="rRT-Pa-jmB">
-                                <rect key="frame" x="0.0" y="28" width="375" height="76"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="95" id="rRT-Pa-jmB" customClass="newTableViewCell" customModule="iLoveBets" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="95"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rRT-Pa-jmB" id="vH3-EQ-Vkw">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="95"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aBs-wd-CZh">
-                                            <rect key="frame" x="16" y="14.5" width="38" height="24"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QDq-LJ-TCP">
+                                            <rect key="frame" x="18" y="19" width="335" height="24"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5mF-oi-s4p">
-                                            <rect key="frame" x="16" y="42" width="50" height="17"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bt1-Yy-jJx">
+                                            <rect key="frame" x="18" y="51" width="335" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctb-BA-bjE">
+                                            <rect key="frame" x="357" y="6" width="10" height="81"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="71" id="iR9-J0-FPq"/>
+                                                <constraint firstAttribute="width" constant="10" id="yhR-MI-ofJ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="black" pointSize="26"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ctb-BA-bjE" firstAttribute="top" secondItem="vH3-EQ-Vkw" secondAttribute="top" constant="6" id="7c1-hK-hYH"/>
+                                        <constraint firstItem="QDq-LJ-TCP" firstAttribute="top" secondItem="vH3-EQ-Vkw" secondAttribute="topMargin" constant="8" id="8aR-Hk-Aul"/>
+                                        <constraint firstAttribute="bottom" secondItem="ctb-BA-bjE" secondAttribute="bottom" constant="8" id="CPQ-xR-VZZ"/>
+                                        <constraint firstItem="bt1-Yy-jJx" firstAttribute="leading" secondItem="vH3-EQ-Vkw" secondAttribute="leadingMargin" constant="2" id="LbU-vG-BpZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="ctb-BA-bjE" secondAttribute="trailing" constant="8" id="NwC-B0-mLv"/>
+                                        <constraint firstItem="bt1-Yy-jJx" firstAttribute="top" secondItem="QDq-LJ-TCP" secondAttribute="bottom" constant="8" id="Rvt-6M-97T"/>
+                                        <constraint firstItem="ctb-BA-bjE" firstAttribute="leading" secondItem="bt1-Yy-jJx" secondAttribute="trailing" constant="4" id="hEu-zS-ZaK"/>
+                                        <constraint firstItem="QDq-LJ-TCP" firstAttribute="leading" secondItem="vH3-EQ-Vkw" secondAttribute="leadingMargin" constant="2" id="mne-vj-bQS"/>
+                                        <constraint firstItem="ctb-BA-bjE" firstAttribute="leading" secondItem="QDq-LJ-TCP" secondAttribute="trailing" constant="4" id="x3R-kJ-9vh"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="labelDot" destination="ctb-BA-bjE" id="PN5-Hq-413"/>
+                                    <outlet property="labelSubtitle" destination="bt1-Yy-jJx" id="KAu-bu-wVL"/>
+                                    <outlet property="labelTitle" destination="QDq-LJ-TCP" id="YfL-n8-Wwh"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -404,7 +429,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CGD-mM-pNO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1757.5999999999999" y="-224.4377811094453"/>
+            <point key="canvasLocation" x="1708" y="-225.33733133433284"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Hka-8x-dbD">
