--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -193,6 +193,7 @@
                         <outlet property="helpButton" destination="N4C-3Q-fJ3" id="L4y-P7-Y65"/>
                         <outlet property="helpButtonHeight" destination="PGJ-68-PfL" id="qkL-9O-JoV"/>
                         <outlet property="iLoveBetsLabel" destination="XMk-Vi-Eeg" id="9Vo-hT-PAQ"/>
+                        <outlet property="iLoveBetsTopConstraints" destination="8Fk-WS-4Mc" id="RSn-st-TnQ"/>
                         <outlet property="leftConstraintYourPersonalSportsBettingAdvisor" destination="NaY-Hr-zzU" id="Jdk-ft-ypm"/>
                         <outlet property="rightConstraintYourPersonalSportsBettingAdvisor" destination="flT-UJ-mBK" id="SB8-iO-QuU"/>
                         <outlet property="sportBetsLabel" destination="PMF-W3-YlE" id="bPK-jM-LmP"/>
